--- a/package.json
+++ b/package.json
@@ -18,12 +18,11 @@
   },
   "homepage": "https://github.com/dtcrowley/RealEstateTemplate#readme",
   "dependencies": {
-    "@sendgrid/mail": "^6.2.1",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "jquery-validation": "^1.17.0",
     "morgan": "^1.9.0",
-    "sendgrid": "^5.2.3",
+    "nodemailer": "^4.6.6",
     "server": "^1.0.18"
   }
 }
